--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple functional canvas library",
   "main": "index.js",
   "scripts": {
-    "test": "ava"
+    "test": "ava --tap | tap-mocha-reporter spec"
   },
   "keywords": [
     "canvas"
@@ -13,7 +13,10 @@
   "license": "MIT",
   "devDependencies": {
     "ava": "^0.15.1",
+    "babel-cli": "^6.9.0",
     "babel-core": "^6.9.1",
+    "jsdom": "^9.2.1",
+    "serve": "^1.4.0",
     "sinon": "^1.17.4",
     "webpack": "^1.13.1"
   },
@@ -23,5 +26,9 @@
       "./test/helpers/setup-browser-env.js"
     ],
     "babel": "inherit"
+  },
+  "dependencies": {
+    "babel-preset-es2015": "^6.9.0",
+    "tap-mocha-reporter": "0.0.24"
   }
 }
