--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Simple functional canvas library",
   "main": "index.js",
   "scripts": {
+    "start": "serve examples",
     "test": "ava"
   },
   "keywords": [
@@ -14,6 +15,7 @@
   "devDependencies": {
     "ava": "^0.15.1",
     "babel-core": "^6.9.1",
+    "serve": "^1.4.0",
     "sinon": "^1.17.4",
     "webpack": "^1.13.1"
   },
