--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Simple functional canvas library",
   "main": "index.js",
   "scripts": {
-    "test": "ava --tap | tap-mocha-reporter spec"
+    "test": "ava",
+    "build": "webpack"
   },
   "keywords": [
     "canvas"
@@ -15,6 +16,9 @@
     "ava": "^0.15.1",
     "babel-cli": "^6.9.0",
     "babel-core": "^6.9.1",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
+    "tap-mocha-reporter": "0.0.24",
     "jsdom": "^9.2.1",
     "serve": "^1.4.0",
     "sinon": "^1.17.4",
@@ -28,7 +32,6 @@
     "babel": "inherit"
   },
   "dependencies": {
-    "babel-preset-es2015": "^6.9.0",
-    "tap-mocha-reporter": "0.0.24"
+
   }
 }
