--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "canvas",
+  "name": "pinky",
   "version": "1.0.0",
   "description": "Simple functional canvas library",
   "main": "index.js",
