--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "serve examples",
     "test": "ava",
+    "test:coverage": "nyc ava",
     "build": "webpack"
   },
   "keywords": [
@@ -14,12 +15,11 @@
   "author": "Keith Bingman",
   "license": "MIT",
   "devDependencies": {
-    "ava": "^0.15.1",
+    "ava": "^0.17.0",
     "babel-cli": "^6.9.0",
     "babel-core": "^6.9.1",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
-    "tap-mocha-reporter": "0.0.24",
     "jsdom": "^9.2.1",
     "serve": "^1.4.0",
     "sinon": "^1.17.4",
@@ -33,6 +33,6 @@
     "babel": "inherit"
   },
   "dependencies": {
-
+    "nyc": "^10.0.0"
   }
 }
