--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple functional canvas library",
   "main": "index.js",
   "scripts": {
-    "start": "serve examples",
+    "start": "npm run build & serve examples",
     "test": "ava",
     "test:coverage": "nyc ava",
     "build": "webpack"
