--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "pinky",
   "version": "1.0.0",
   "description": "Simple functional canvas library",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "start": "npm run build & serve examples",
     "test": "ava",
     "test:coverage": "nyc ava",
-    "build": "webpack"
+    "build": "babel src -q -d dist"
   },
   "keywords": [
     "canvas"
@@ -17,13 +17,14 @@
   "devDependencies": {
     "ava": "^0.17.0",
     "babel-cli": "^6.9.0",
-    "babel-core": "^6.9.1",
-    "babel-loader": "^6.2.4",
+    "babel-core": "6.20",
+    "babel-loader": "6.2.9",
     "babel-preset-es2015": "^6.9.0",
     "jsdom": "^9.2.1",
-    "serve": "^1.4.0",
+    "nyc": "^10.0.0",
+    "serve": "2.0.0",
     "sinon": "^1.17.4",
-    "webpack": "^1.13.1"
+    "webpack": "1.14.0"
   },
   "ava": {
     "require": [
@@ -31,8 +32,5 @@
       "./test/helpers/setup-browser-env.js"
     ],
     "babel": "inherit"
-  },
-  "dependencies": {
-    "nyc": "^10.0.0"
   }
 }
