--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "ava",
     "test:coverage": "nyc ava",
     "build": "babel src -q -d dist",
+    "watch": "babel src -w -d dist",
     "prepublish": "npm run test && npm run build"
   },
   "keywords": [
