--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "pinky",
   "version": "1.0.0",
   "description": "Simple functional canvas library",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "start": "serve examples",
-    "test": "ava --verbose",
-    "test:coverage": "nyc npm run test",
-    "build": "webpack"
+    "test": "ava",
+    "test:coverage": "nyc ava",
+    "build": "babel src -q -d dist",
+    "watch": "babel src -w -d dist",
+    "prepublish": "npm run test && npm run build"
   },
   "keywords": [
     "canvas"
@@ -15,15 +16,15 @@
   "author": "Keith Bingman",
   "license": "MIT",
   "devDependencies": {
-    "ava": "^0.16.0",
+    "ava": "^0.17.0",
     "babel-cli": "^6.9.0",
-    "babel-core": "^6.9.1",
-    "babel-loader": "^6.2.4",
+    "babel-core": "6.20",
+    "babel-loader": "6.2.9",
     "babel-preset-es2015": "^6.9.0",
-    "jsdom": "^9.5.0",
-    "serve": "^1.4.0",
-    "sinon": "^1.17.4",
-    "webpack": "^1.13.1"
+    "jsdom": "^9.2.1",
+    "nyc": "^10.0.0",
+    "serve": "2.0.0",
+    "sinon": "^1.17.4"
   },
   "ava": {
     "require": [
@@ -31,6 +32,5 @@
       "./test/helpers/setup-browser-env.js"
     ],
     "babel": "inherit"
-  },
-  "dependencies": {}
+  }
 }
