--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "babel-cli": "^6.9.0",
     "babel-core": "6.20",
     "babel-loader": "6.2.9",
-    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-env": "^1.2.2",
     "jsdom": "^9.2.1",
     "nyc": "^10.0.0",
     "serve": "2.0.0",
