--- a/package.json
+++ b/package.json
@@ -10,22 +10,29 @@
     "watch": "babel src -w -d dist",
     "prepublish": "npm run test && npm run build"
   },
-  "keywords": ["canvas"],
+  "keywords": [
+    "canvas"
+  ],
   "author": "Keith Bingman",
   "license": "MIT",
   "devDependencies": {
     "ava": "^0.17.0",
     "babel-cli": "^6.9.0",
-    "babel-core": "6.20",
+    "babel-core": "^6.25.0",
     "babel-loader": "6.2.9",
-    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-env": "^1.6.0",
+    "http-server": "^0.10.0",
     "jsdom": "^9.2.1",
     "nyc": "^10.0.0",
     "serve": "2.0.0",
-    "sinon": "^1.17.4"
+    "sinon": "^1.17.4",
+    "webpack": "^3.3.0"
   },
   "ava": {
-    "require": ["babel-core/register", "./test/helpers/setup-browser-env.js"],
+    "require": [
+      "babel-core/register",
+      "./test/helpers/setup-browser-env.js"
+    ],
     "babel": "inherit"
   }
 }
