missed a method when renaming

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "ava": {
     "require": ["babel-core/register", "./test/helpers/setup-browser-env.js"],
-    "babel": "inherit"
+    "babel": "inherit",
+    "concurrency": 2
   }
 }
