--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "test": "ava",
     "watch": "babel src -w -d dist"
   },
-  "keywords": ["canvas"],
+  "keywords": [
+    "canvas"
+  ],
   "author": "Keith Bingman",
   "license": "MIT",
   "devDependencies": {
@@ -27,7 +29,10 @@
     "webpack": "^3.3.0"
   },
   "ava": {
-    "require": ["babel-core/register", "./test/helpers/setup-browser-env.js"],
+    "require": [
+      "babel-core/register",
+      "./test/helpers/setup-browser-env.js"
+    ],
     "babel": "inherit"
   }
 }
