--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ava": "^0.17.0",
     "babel-cli": "^6.9.0",
     "babel-core": "^6.25.0",
+    "babel-eslint": "^7.2.3",
     "babel-loader": "6.2.9",
     "babel-preset-env": "^1.6.0",
     "http-server": "^0.10.0",
